overflow solved in app.css

--- a/src/elements/Quote.css
+++ b/src/elements/Quote.css
@@ -105,6 +105,17 @@
     border-radius: 4px;
 }
 
+.Form-textarea {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 115px;
+    font-size: 16px;
+    padding: 6px 12px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
 .Form-buttonContainer {
     position: absolute;
     bottom: 0;
@@ -127,13 +138,6 @@
     border: 1px solid transparent;
 }
 
-.formComment{
-    padding: 50px;
-    min-height: 120px;
-    height: 120px;
-}
-
-
 
 .column {
     float: left;
@@ -141,14 +145,14 @@
 }
 
 /* Clear floats after the columns */
-.row:after {
+.row::after {
     content: "";
     display: table;
     clear: both;
 }
 
 .QuoteBtn{
- display: flex;
+ 
  align-items: center;
 
  @media screen and (max-width: 768px) {
